--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "homepage": "https://adeel3786.github.io/weather-pwa",
+  "homepage": "https://adeel3786.github.io/weatherpwa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
